# Neural_Forge

./: .gitignore  README.md  ollama.py  requirements.txt  web.py
compression_agent/compression_agent/: README.md  pyproject.toml  report.md  requirements.txt
compression_agent/compression_agent/src/compression_agent/: crew.py  main.py
compression_agent/compression_agent/src/compression_agent/config/: agents.yaml  tasks.yaml
frontend/: app.js  index.html  styles.css
providers/: providers.py
services/: compressionUtils.py  prune.py
utils/: utils.py
