[project]
name = "compression_agent"
version = "0.1.0"
description = "compression_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
]

[project.scripts]
compression_agent = "compression_agent.main:run"
run_crew = "compression_agent.main:run"
train = "compression_agent.main:train"
replay = "compression_agent.main:replay"
test = "compression_agent.main:test"
run_with_trigger = "compression_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
